# zakatrs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build-dart.ps1  convert.ps1  jitpack.yml  pyproject.toml  research.md  test_output.txt  zakatrs.pyi
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  go-release.yml
assets/locales/ar-SA/: main.ftl
assets/locales/en-US/: main.ftl
assets/locales/id-ID/: main.ftl
docs/: USAGE_FLUTTER.md  USAGE_JS.md  USAGE_PYTHON.md  USAGE_RUST.md
examples/: async_live_pricing.rs  dump_schema.rs  live_ticker.rs  modern_api_demo.rs  mr_ahmad_scenario.rs  real_world_cases.rs
examples/wasm-demo/: index.html
jsr-config/: .gitignore  LICENSE  README.md  definitions.ts  jsr.json  mod.ts  zakat.d.ts  zakat.js  zakat_bg.wasm  zakat_bg.wasm.d.ts
scripts/: build-all.ps1  build-all.sh  build-wasm.ps1  dry-run-all.ps1  generate-bindings.ps1  generate-bindings.sh  generate-schema.sh  publish-all.ps1  publish-crates.ps1  publish-dart.ps1  publish-jsr.ps1  publish-npm.ps1  publish-pypi.ps1  sync-pkg-metadata.ps1  sync-versions.ps1
src/: assets.rs  builder.rs  config.rs  fitrah.rs  i18n.rs  inputs.rs  kotlin.rs  lib.rs  macros.rs  madhab.rs  math.rs  portfolio.rs  prelude.rs  pricing.rs  python.rs  traits.rs  types.rs  utils.rs  wasm.rs
src/ledger/: analyzer.rs  assets.rs  events.rs  mod.rs  persistence.rs  pricing.rs  sqlite.rs  timeline.rs
src/maal/: agriculture.rs  business.rs  calculator.rs  income.rs  investments.rs  livestock.rs  mining.rs  mod.rs  precious_metals.rs
tests/: async_portfolio_perf.rs  custom_assets.rs  dx_check.rs  dx_fluent_api.rs  explain_check.rs  fiqh_advanced_scenarios.rs  fiqh_features.rs  i18n_test.rs  ledger_corner_cases.rs  phase1_security.rs  portfolio_aggregation.rs  portfolio_dynamic.rs  portfolio_partial_failure.rs  safe_setters.rs  serialization.rs  strategy_pattern.rs  test-npm.js  test_wasm_compliance.js  trace_output.rs  ux_safeguards.rs  view_model_tests.rs
tests/fixtures/: zakat_suite.json
tests/py/: test_api.py  test_compliance.py  test_zakatrs.py
xtask/: Cargo.toml
xtask/src/: main.rs
zakat/: Cargo.toml  README.md
zakat-cli/: Cargo.toml
zakat-cli/src/: config_loader.rs  main.rs  wizard.rs
zakat-cli/src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs  ui_tests.rs
zakat-cli/src/tui/components/: asset_card.rs  mod.rs  spinner.rs  stat_card.rs
zakat-core/: Cargo.toml  README.md  zakatrs.pyi
zakat-core/src/: assets.rs  config.rs  debt.rs  distribution.rs  fitrah.rs  hawl.rs  inputs.rs  kotlin.rs  lib.rs  macros.rs  madhab.rs  math.rs  partnership.rs  portfolio.rs  prelude.rs  python.rs  traits.rs  types.rs  validation.rs
zakat-core/src/maal/: agriculture.rs  business.rs  calculator.rs  income.rs  investments.rs  livestock.rs  mining.rs  mod.rs  precious_metals.rs  restricted.rs
zakat-core/tests/: api_ergonomics.rs  fiqh_advanced.rs  gen_py_stubs.rs
zakat-i18n/: Cargo.toml  README.md
zakat-i18n/assets/locales/en-US/: main.ftl
zakat-i18n/assets/locales/id-ID/: main.ftl
zakat-i18n/src/: i18n.rs  lib.rs
zakat-ledger/: Cargo.toml  README.md
zakat-ledger/src/: analyzer.rs  assets.rs  events.rs  lib.rs  pricing.rs  qada.rs  qada_inflation.rs  timeline.rs
zakat-providers/: Cargo.toml  README.md
zakat-providers/src/: chain.rs  fs_cache.rs  lib.rs  pricing.rs
zakat-sqlite/: Cargo.toml  README.md
zakat-sqlite/src/: lib.rs  persistence.rs  sqlite.rs
zakat-test-gen/: Cargo.toml
zakat-test-gen/src/: gen_dart.rs  gen_go.rs  gen_python.rs  main.rs  scenarios.rs  schema.rs
zakat/src/: lib.rs  wasm.rs
zakat/tests/: fiqh_advanced_scenarios.rs
zakat_android/: build.gradle.kts  settings.gradle.kts
zakat_android/lib/: build.gradle.kts
zakat_android/lib/src/main/java/com/islamic/zakat/: Types.kt
zakat_dart/: .gitignore  .pubignore  CHANGELOG.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
zakat_dart/doc/: USAGE_FLUTTER.md  USAGE_JS.md  USAGE_RUST.md
zakat_dart/example/: main.dart
zakat_dart/integration_test/: simple_test.dart
zakat_dart/lib/: zakat.dart
zakat_dart/lib/src/: extensions.dart
zakat_dart/lib/src/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
zakat_dart/lib/src/ffi/api/: assets.dart  types.dart  zakat.dart
zakat_dart/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
zakat_dart/lib/src/rust/api/: simple.dart
zakat_dart/rust/: Cargo.toml
zakat_dart/rust/src/: frb_generated.rs  lib.rs  macros.rs
zakat_dart/rust/src/api/: assets.rs  mod.rs  simple.rs  types.rs  zakat.rs
zakat_dart/test/: compliance_test.dart  zakat_test.dart
zakat_dart/web/: index.html  manifest.json
zakat_go/: compliance_test.go  go.mod  zakat.go
