[package]
name = "zakat"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]

[dependencies]
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimization opportunities
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip symbols from binary
