[package]
name = "zakat"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "A type-safe, comprehensive, and Fiqh-compliant Zakat calculation library. Supports Gold, Silver, Business, Agriculture, Livestock, Professional Income, and Modern Assets (Crypto/Stocks)."
readme = "README.md"
repository = "https://github.com/IRedDragonICY/zakatrs"
keywords = ["zakat", "islamic-finance", "fiqh", "finance", "halal"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimization opportunities
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip symbols from binary
