[package]
name = "zakat"
version = "0.7.0"
edition = "2024"
license = "MIT"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "A type-safe, comprehensive, and Fiqh-compliant Zakat calculation library. Supports Gold, Silver, Business, Agriculture, Livestock, Professional Income, and Modern Assets (Crypto/Stocks)."
readme = "README.md"
repository = "https://github.com/IRedDragonICY/zakatrs"
keywords = ["zakat", "islamic-finance", "fiqh", "finance", "halal"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["async"]
async = ["dep:async-trait"]
wasm = []

[dependencies]
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0.148"
async-trait = { version = "0.1.89", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.106"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "macros"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimization opportunities
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip symbols from binary

