[package]
name = "zakat-cli"
description = "Interactive CLI tool for Zakat calculations and debugging."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "zakat-cli"
path = "src/main.rs"

[features]
default = ["live-pricing"]
live-pricing = ["zakat-providers/live-pricing"]

[dependencies]
# Internal crates
zakat-core = { workspace = true, features = ["async"] }
zakat-providers = { workspace = true }
zakat-i18n = { workspace = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }

# TUI dependencies
ratatui = "0.30.0"
crossterm = "0.29"
tui-input = "0.12"

# Common dependencies
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { workspace = true }

# Configuration
toml = "0.8"
dirs = "6.0"
