[package]
name = "rust_lib_zakat_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
zakat = { path = "../../", features = ["async"] }
rust_decimal = "1.39"
anyhow = "1.0.100"
uuid = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
